docs/versioned_docs/version-4.5/configuration/deployments/kubernetes-manifests.mdx
---
title: Deploy Kubernetes Manifests
sidebar_label: kubectl (manifests)
---

import FragmentReplaceImageTags from '../../fragments/kubectl-replaceImageTags.mdx';
import FragmentKubectlFlags from '../../fragments/kubectl-options-flags.mdx';
import FragmentKubectlCmdPath from '../../fragments/kubectl-options-cmdPath.mdx';
import FragmentKubectlKustomize from '../../fragments/kubectl-kustomize.mdx';

To deploy Kubernetes manifests with `kubectl apply`, you need to configure them within the `deployments` section of the `devspace.yaml`.

## Example
```yaml
deployments:
- name: backend
  kubectl:
    manifests:
    - backend/
    - backend-extra/
- name: frontend
  kubectl:
    manifests:
    - frontend/manifest.yaml
```

The above example will be executing during the deployment process as follows:
```bash
kubectl apply -f backend
kubectl apply -f backend-extra
kubectl apply -f frontend/manifest.yaml
```

:::warning Kubectl Required
Deployments with `kubectl` require `kubectl` to be installed. The `kubectl` binary either needs to be found through your `$PATH` variable or by specifying the [`cmdPath` option](#cmdpath).
:::


## Manifests

### `manifests`
The `manifests` option is mandatory and expects an array of paths or path globs that point to Kubernetes manifest files (yaml or json files) or to folders containing Kubernetes manifests or Kustomizations.

#### Example: Manifests
```yaml
deployments:
- name: backend
  kubectl:
    manifests:
    - backend/
    - backend-extra/
    - glob/path/to/manifests/*
```


### `kustomize`

<FragmentKubectlKustomize/>


### `replaceImageTags`

<FragmentReplaceImageTags/>


## Kubectl Options

### `flags`

<FragmentKubectlFlags/>


### `cmdPath`

<FragmentKubectlCmdPath/>


## General Options

### `name`
The `name` option is required and expects a string to identify this deployment.

#### Example: Deployment Name
```yaml {2}
deployments:
- name: backend
  kubectl:
    manifests:
    - backend/
    - backend-extra/
```

### `namespace`
The `namespace` option is required and expects a string with the namespace used to deploy the manifests.

:::warning
Only use this option if you really need to. Hard-coding the namespace in `devspace.yaml` makes it harder to share the configuration with your colleagues. It is recommended to set the default namespace of the current context instead using:
```bash
devspace use namespace [some-namespace]
```
:::

#### Example: Deployment Namespace
```yaml {3}
deployments:
- name: backend
  namespace: some-namespace
  kubectl:
    manifests:
    - backend/
    - backend-extra/
```
